Added more game logic

--- a/src/app/modules/chess-board/chess-board.component.html
+++ b/src/app/modules/chess-board/chess-board.component.html
@@ -4,6 +4,7 @@
       *ngFor="let piece of row; let y = index"
       class="square"
       [ngClass]="{ dark: isSquareDark(x, y), light: !isSquareDark(x, y) }"
+      (click)="selectingPiece(x, y)"
     >
       <img
         *ngIf="piece"
